# mlops

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yaml  deploy.yml
dags/: monitor_drift.py
k8s/: pod.yaml
src/: app.py  config.py  predict.py  train.py
tests/: test_train.py
tests/e2e/: test_prediction_pipeline.py
tests/integration/: test_mlflow_connection.py  test_model_loading.py  test_model_registration.py
tests/units/: test_api.py  test_metrics.py  test_train.py
