[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops-zero-to-hero"
version = "0.1.0"
description = "A beginner MLOps project using the Iris dataset and Random Forest."
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [
{ name = "Hamid Mukhtar" }
]

dependencies = [
    "scikit-learn==1.9.0",
    "pandas==2.2.3",
    "joblib==1.5.3",
    "fastapi[standard]==0.136.3",
    "pytest>=8.0",
    "numpy==2.0.2",
    "mlflow>=2.17.2",
    "evidently==0.4.39",
    "apache-airflow>=3.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
